Make model classes more hierarchical
- timeline_process turned into process, base and kernel classes
- updateBounds moves to process hierarchy
- updateCategories moved to process hierarchy
- Range class introduced and used instead of min/maxTs

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -11,6 +11,8 @@ found in the LICENSE file.
   tests = [
     'unittest_test.html',
     'overlay_test.html',
+    'range_test.html',
+    'timeline_process_base_test.html',
     'timeline_async_slice_group_test.html',
     'timeline_find_control_test.html',
     'timeline_slice_group_test.html',
