Handle sched_wakeup in Linux perf importer
BUG=13

Review URL: https://codereview.appspot.com/7303094

--- a/trunk/src/linux_perf_sched_parser_test.html
+++ b/trunk/src/linux_perf_sched_parser_test.html
@@ -63,7 +63,60 @@ function testSchedWakeupRE() {
 }
 
 function testImportOneSequenceWithSchedWakeUp() {
-  // TODO(nduca): write test for this.
+
+  var lines = [
+    'ndroid.launcher-584   [001] d..3 12622.506890: sched_switch: ' +
+      'prev_comm=ndroid.launcher prev_pid=584 prev_prio=120 prev_state=R+ ' +
+      '==> next_comm=Binder_1 next_pid=217 next_prio=120',
+
+    '       Binder_1-217   [001] d..3 12622.506918: sched_switch: ' +
+      'prev_comm=Binder_1 prev_pid=217 prev_prio=120 prev_state=D ' +
+      '==> next_comm=ndroid.launcher next_pid=584 next_prio=120',
+
+    'ndroid.launcher-584   [001] d..4 12622.506936: sched_wakeup: ' +
+      'comm=Binder_1 pid=217 prio=120 success=1 target_cpu=001',
+
+    'ndroid.launcher-584   [001] d..3 12622.506950: sched_switch: ' +
+      'prev_comm=ndroid.launcher prev_pid=584 prev_prio=120 prev_state=R+ ' +
+      '==> next_comm=Binder_1 next_pid=217 next_prio=120',
+
+    '       Binder_1-217   [001] ...1 12622.507057: tracing_mark_write: ' +
+      'B|128|queueBuffer',
+
+    '       Binder_1-217   [001] ...1 12622.507175: tracing_mark_write: E',
+
+    '       Binder_1-217   [001] d..3 12622.507253: sched_switch: ' +
+      'prev_comm=Binder_1 prev_pid=217 prev_prio=120 prev_state=S ' +
+      '==> next_comm=ndroid.launcher next_pid=584 next_prio=120'
+  ];
+
+  var m = new tracing.TimelineModel(lines.join('\n'), false);
+  assertEquals(0, m.importErrors.length);
+
+  var thread = m.findAllThreadsNamed('Binder_1')[0];
+  var cpuSlices = thread.cpuSlices;
+  assertEquals(4, cpuSlices.length);
+
+  var runningSlice = cpuSlices[0];
+  assertEquals('Running', runningSlice.title);
+  assertAlmostEquals(12622506.890, runningSlice.start);
+  assertAlmostEquals(.918 - .890, runningSlice.duration);
+
+  var sleepSlice = cpuSlices[1];
+  assertEquals('Uninterruptible Sleep', sleepSlice.title);
+  assertAlmostEquals(12622506.918, sleepSlice.start);
+  assertAlmostEquals(.936 - .918, sleepSlice.duration);
+
+  var wakeupSlice = cpuSlices[2];
+  assertEquals('Runnable', wakeupSlice.title);
+  assertAlmostEquals(12622506.936, wakeupSlice.start);
+  assertAlmostEquals(.950 - .936, wakeupSlice.duration);
+  assertEquals(584, wakeupSlice.args['wakeup from tid']);
+
+  var runningSlice2 = cpuSlices[3];
+  assertEquals('Running', runningSlice2.title);
+  assertAlmostEquals(12622506.950, runningSlice2.start);
+  assertAlmostEquals(7.253 - 6.950, runningSlice2.duration);
 }
 
 </script>
