--- a/trunk/src/importer/timeline_stream_importer_test.html
+++ b/trunk/src/importer/timeline_stream_importer_test.html
@@ -7,14 +7,14 @@ found in the LICENSE file.
 -->
 <head>
 <title>Timeline stream importer tests</title>
-<script src="base.js"></script>
+<script src="../base.js"></script>
 </head>
 <body>
 <script>
   base.require('unittest');
   base.require('event_target');
   base.require('test_utils');
-  base.require('timeline_stream_importer');
+  base.require('importer.timeline_stream_importer');
 </script>
 <script>
   'use strict';
