--- a/trunk/src/importer/trace_event_importer_test.html
+++ b/trunk/src/importer/trace_event_importer_test.html
@@ -7,11 +7,11 @@ found in the LICENSE file.
 -->
 <head>
 <title>TraceEventImporter tests</title>
-<script src="base.js"></script>
+<script src="../base.js"></script>
 <script>
   base.require('unittest');
   base.require('test_utils');
-  base.require('trace_event_importer');
+  base.require('importer.trace_event_importer');
 </script>
 </head>
 <body>
