--- a/trunk/src/importer/linux_perf/exynos_parser_test.html
+++ b/trunk/src/importer/linux_perf/exynos_parser_test.html
@@ -7,7 +7,7 @@ found in the LICENSE file.
 -->
 <head>
 <title>LinuxPerfExynosParser tests</title>
-<script src="base.js"></script>
+<script src="../../base.js"></script>
 </head>
 <body>
 <script>
@@ -15,7 +15,7 @@ found in the LICENSE file.
 
 base.require('unittest');
 base.require('test_utils');
-base.require('linux_perf_importer');
+base.require('importer.linux_perf_importer');
 
 function testExynosImport() {
   var lines = [
