--- a/trunk/src/timeline_analysis_test.html
+++ b/trunk/src/timeline_analysis_test.html
@@ -25,7 +25,7 @@ found in the LICENSE file.
     base.require('tracing_controller');
     base.require('test_utils');
     base.require('timeline_model');
-    base.require('trace_event_importer');
+    base.require('importer.trace_event_importer');
     base.require('timeline_analysis');
     base.require('timeline_filter');
     base.require('tracks.timeline_counter_track');
