--- a/trunk/src/timeline_test.html
+++ b/trunk/src/timeline_test.html
@@ -12,7 +12,7 @@ found in the LICENSE file.
   base.require('unittest');
   base.require('test_utils');
   base.require('timeline');
-  base.require('trace_event_importer');
+  base.require('importer.trace_event_importer');
 </script>
 </head>
 <body>
