Fixup namespacing from file move CL.
This places all the importer files into the correct namespace
of importer and importer.linux_perf depending on directory
structure.

Review URL: https://codereview.appspot.com/7371043

--- a/trunk/examples/stream_trace_viewer.html
+++ b/trunk/examples/stream_trace_viewer.html
@@ -44,7 +44,7 @@ found in the LICENSE file.
     view.tabIndex = 0;
     view.focusElement = view;
 
-    var streamer = new tracing.TimelineStreamImporter(model);
+    var streamer = new tracing.importer.TimelineStreamImporter(model);
     streamer.addEventListener('connect', function () {
       console.log('connected');
     });
