--- a/trunk/src/importer/linux_perf/drm_parser_test.html
+++ b/trunk/src/importer/linux_perf/drm_parser_test.html
@@ -6,7 +6,7 @@ Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
 <head>
-<title>LinuxPerfDrmParser tests</title>
+<title>importer.linux_perf.DrmParser tests</title>
 <script src="../../base.js"></script>
 </head>
 <body>
