--- a/trunk/src/importer/linux_perf/i915_parser_test.html
+++ b/trunk/src/importer/linux_perf/i915_parser_test.html
@@ -6,7 +6,7 @@ Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
 <head>
-<title>LinuxPerfI915Parser tests</title>
+<title>importer.linux_perf.I915Parser tests</title>
 <script src="../../base.js"></script>
 </head>
 <body>
