--- a/trunk/src/importer/linux_perf_importer_test.html
+++ b/trunk/src/importer/linux_perf_importer_test.html
@@ -18,7 +18,7 @@ base.require('test_utils');
 base.require('importer.linux_perf_importer');
 
 function testLineRE() {
-  var re = tracing._LinuxPerfImporterTestExports.lineRE;
+  var re = tracing.importer._LinuxPerfImporterTestExports.lineRE;
   var x = re.exec('   <idle>-0     [001]  4467.843475: sched_switch: ' +
       'prev_comm=swapper prev_pid=0 prev_prio=120 prev_state=R ==> ' +
       'next_comm=SurfaceFlinger next_pid=178 next_prio=112');
@@ -37,7 +37,7 @@ function testLineRE() {
 }
 
 function testLineREWithIRQInfo() {
-  var re = tracing._LinuxPerfImporterTestExports.lineREWithIRQInfo;
+  var re = tracing.importer._LinuxPerfImporterTestExports.lineREWithIRQInfo;
   var x = re.exec('     systrace.sh-5441  [001] d...  1031.091570: ' +
         'sched_wakeup: comm=debugd pid=4978 prio=120 success=1 target_cpu=000');
   assertNotNull(x);
@@ -53,13 +53,14 @@ function testAutodetectLineCornerCases() {
              'prev_comm=systrace.sh prev_pid=8170 prev_prio=120 ' +
              'prev_state=x ==> next_comm=kworker/1:0 next_pid=7873 ' +
              'next_prio=120';
-  var autoLineRE = tracing._LinuxPerfImporterTestExports.autoDetectLineRE(line);
-  var lineRE = tracing._LinuxPerfImporterTestExports.lineRE;
+  var autoLineRE =
+      tracing.importer._LinuxPerfImporterTestExports.autoDetectLineRE(line);
+  var lineRE = tracing.importer._LinuxPerfImporterTestExports.lineRE;
   assertEquals(autoLineRE, lineRE, 'Mis-detected line format without IRQ info');
 }
 
 function testTraceEventClockSyncRE() {
-  var re = tracing._LinuxPerfImporterTestExports.traceEventClockSyncRE;
+  var re = tracing.importer._LinuxPerfImporterTestExports.traceEventClockSyncRE;
   var x = re.exec('trace_event_clock_sync: parent_ts=19581477508');
   assertNotNull(x);
   assertEquals('19581477508', x[1]);
@@ -91,14 +92,14 @@ function testCanImport() {
           'prev_comm=swapper prev_pid=0 prev_prio=120 prev_state=R ==> ' +
           'next_comm=kworker/u:2 next_pid=2844 next_prio=120'
   ];
-  assertTrue(tracing.LinuxPerfImporter.canImport(lines.join('\n')));
+  assertTrue(tracing.importer.LinuxPerfImporter.canImport(lines.join('\n')));
 
   var lines = [
     '          <idle>-0     [001]  4467.843475: sched_switch: ' +
             'prev_comm=swapper prev_pid=0 prev_prio=120 prev_state=R ==> ' +
             'next_comm=SurfaceFlinger next_pid=178 next_prio=112'
   ];
-  assertTrue(tracing.LinuxPerfImporter.canImport(lines.join('\n')));
+  assertTrue(tracing.importer.LinuxPerfImporter.canImport(lines.join('\n')));
 
   var lines = [
     '          <idle>-0     [001]  4467.843475: sched_switch: ' +
@@ -110,13 +111,13 @@ function testCanImport() {
               'prev_state=S ==> next_comm=kworker/u:2 next_pid=2844 ' +
               'next_prio=120'
   ];
-  assertTrue(tracing.LinuxPerfImporter.canImport(lines.join('\n')));
+  assertTrue(tracing.importer.LinuxPerfImporter.canImport(lines.join('\n')));
 
   var lines = [
     'SomeRandomText',
     'More random text'
   ];
-  assertFalse(tracing.LinuxPerfImporter.canImport(lines.join('\n')));
+  assertFalse(tracing.importer.LinuxPerfImporter.canImport(lines.join('\n')));
 }
 
 function testCanImport34AndLater() {
@@ -138,7 +139,7 @@ function testCanImport34AndLater() {
         'prev_comm=systrace.sh prev_pid=5441 prev_prio=120 prev_state=x ' +
         '==> next_comm=chrome next_pid=5418 next_prio=120'
   ];
-  assertTrue(tracing.LinuxPerfImporter.canImport(lines.join('\n')));
+  assertTrue(tracing.importer.LinuxPerfImporter.canImport(lines.join('\n')));
 
   var lines = [
     '     systrace.sh-5441  [001] d...  1031.091570: sched_wakeup: ' +
@@ -147,7 +148,7 @@ function testCanImport34AndLater() {
         'prev_comm=systrace.sh prev_pid=5441 prev_prio=120 prev_state=x ' +
         '==> next_comm=chrome next_pid=5418 next_prio=120'
   ];
-  assertTrue(tracing.LinuxPerfImporter.canImport(lines.join('\n')));
+  assertTrue(tracing.importer.LinuxPerfImporter.canImport(lines.join('\n')));
 }
 
 function testCanImportSystraceFile() {
@@ -180,7 +181,7 @@ function testCanImportSystraceFile() {
     '</html>'
   ];
   var html_text = html_lines.join('\n');
-  assertTrue(tracing.LinuxPerfImporter.canImport(html_text));
+  assertTrue(tracing.importer.LinuxPerfImporter.canImport(html_text));
 
   var expected_event_lines = [
     '# tracer: nop',
@@ -198,7 +199,9 @@ function testCanImportSystraceFile() {
     ' WebViewCoreThre-11043 [000] 50260.648275: sched_switch: prev_comm=WebViewCoreThre prev_pid=11043 prev_prio=120 prev_state=S ==> next_comm=swapper next_pid=0 next_prio=120'
   ];
   var expected_event_text = expected_event_lines.join('\n');
-  var res = tracing.LinuxPerfImporter._extractEventsFromSystraceHTML(html_text, true);
+  var res =
+      tracing.importer.LinuxPerfImporter._extractEventsFromSystraceHTML(
+          html_text, true);
   var actual_event_text = res.lines.join('\n');
   assertEquals(actual_event_text, expected_event_text);
 }
