Place the tracks code in the tracing namespace.
This updates all of the tracks exports to have a
namespace of tracing.tracks instead of just
tracks. This makes it more consistent wiht the
importer code.

Review URL: https://codereview.appspot.com/7397045

--- a/trunk/src/timeline_analysis_test.html
+++ b/trunk/src/timeline_analysis_test.html
@@ -40,11 +40,11 @@ found in the LICENSE file.
     var TimelineThread = tracing.TimelineThread;
     var TimelineAnalysisView = tracing.TimelineAnalysisView;
     var TimelineModel = tracing.TimelineModel;
-    var TimelineThreadTrack = tracks.TimelineThreadTrack;
+    var TimelineThreadTrack = tracing.tracks.TimelineThreadTrack;
     var TimelineSelection = tracing.TimelineSelection;
     var TimelineTitleFilter = tracing.TimelineTitleFilter;
-    var TimelineCounterTrack = tracks.TimelineCounterTrack;
-    var TimelineSliceTrack = tracks.TimelineSliceTrack;
+    var TimelineCounterTrack = tracing.tracks.TimelineCounterTrack;
+    var TimelineSliceTrack = tracing.tracks.TimelineSliceTrack;
     var newSliceNamed = test_utils.newSliceNamed;
     var newSliceCategory = test_utils.newSliceCategory;
 
