--- a/trunk/src/tracks/timeline_async_slice_group_track_test.html
+++ b/trunk/src/tracks/timeline_async_slice_group_track_test.html
@@ -25,7 +25,8 @@ found in the LICENSE file.
   'use strict';
 
   var TimelineAsyncSliceGroup = tracing.TimelineAsyncSliceGroup;
-  var TimelineAsyncSliceGroupTrack = tracks.TimelineAsyncSliceGroupTrack;
+  var TimelineAsyncSliceGroupTrack =
+      tracing.tracks.TimelineAsyncSliceGroupTrack;
   var TimelineProcess = tracing.TimelineProcess;
   var TimelineThread = tracing.TimelineThread;
   var newAsyncSlice = test_utils.newAsyncSlice;
