--- a/trunk/src/tracks/timeline_counter_track_test.html
+++ b/trunk/src/tracks/timeline_counter_track_test.html
@@ -25,7 +25,7 @@ found in the LICENSE file.
 
   var TimelineCounter = tracing.TimelineCounter;
   var TimelineViewport = tracing.TimelineViewport;
-  var TimelineCounterTrack = tracks.TimelineCounterTrack;
+  var TimelineCounterTrack = tracing.tracks.TimelineCounterTrack;
 
 
   function testBasicCounter() {
