--- a/trunk/src/tracks/timeline_thread_track_test.html
+++ b/trunk/src/tracks/timeline_thread_track_test.html
@@ -28,7 +28,7 @@ found in the LICENSE file.
   var TimelineSelection = tracing.TimelineSelection;
   var TimelineThread = tracing.TimelineThread;
   var TimelineThreadSlice = tracing.TimelineThreadSlice;
-  var TimelineThreadTrack = tracks.TimelineThreadTrack;
+  var TimelineThreadTrack = tracing.tracks.TimelineThreadTrack;
   var TimelineViewport = tracing.TimelineViewport;
   var newAsyncSlice = test_utils.newAsyncSlice;
   var newAsyncSliceNamed = test_utils.newAsyncSliceNamed;
