--- a/trunk/src/timeline_selection_test.html
+++ b/trunk/src/timeline_selection_test.html
@@ -50,7 +50,7 @@ found in the LICENSE file.
       t1.pushSlice(new tracing.TimelineThreadSlice('', 'a', 0, 1, {}, 3));
       t1.pushSlice(new tracing.TimelineThreadSlice('', 'a', 0, 5, {}, 1));
 
-      var track = new tracks.TimelineSliceTrack();
+      var track = new tracing.tracks.TimelineSliceTrack();
       track.slices = t1.slices;
 
       var sel = new tracing.TimelineSelection();
