--- a/trunk/src/tracks/timeline_cpu_track_test.html
+++ b/trunk/src/tracks/timeline_cpu_track_test.html
@@ -25,7 +25,7 @@ found in the LICENSE file.
   'use strict';
 
   var TimelineCpu = tracing.TimelineCpu;
-  var TimelineCpuTrack = tracks.TimelineCpuTrack;
+  var TimelineCpuTrack = tracing.tracks.TimelineCpuTrack;
   var TimelineSlice = tracing.TimelineSlice;
   var TimelineViewport = tracing.TimelineViewport;
 
