--- a/trunk/src/tracks/timeline_slice_group_track_test.html
+++ b/trunk/src/tracks/timeline_slice_group_track_test.html
@@ -25,7 +25,7 @@ found in the LICENSE file.
   'use strict';
 
   var TimelineSliceGroup = tracing.TimelineSliceGroup;
-  var TimelineSliceGroupTrack = tracks.TimelineSliceGroupTrack;
+  var TimelineSliceGroupTrack = tracing.tracks.TimelineSliceGroupTrack;
   var newSliceNamed = test_utils.newSliceNamed;
 
   function testSubRowBuilderBasic() {
