--- a/trunk/src/tracks/timeline_slice_track_test.html
+++ b/trunk/src/tracks/timeline_slice_track_test.html
@@ -25,7 +25,7 @@ found in the LICENSE file.
   'use strict';
 
   var TimelineSelection = tracing.TimelineSelection;
-  var TimelineSliceTrack = tracks.TimelineSliceTrack;
+  var TimelineSliceTrack = tracing.tracks.TimelineSliceTrack;
   var TimelineSlice = tracing.TimelineSlice;
   var TimelineViewport = tracing.TimelineViewport;
 
