--- a/trunk/src/tracks/timeline_viewport_track_test.html
+++ b/trunk/src/tracks/timeline_viewport_track_test.html
@@ -25,7 +25,7 @@ found in the LICENSE file.
   'use strict';
 
   var TimelineViewport = tracing.TimelineViewport;
-  var TimelineViewportTrack = tracks.TimelineViewportTrack;
+  var TimelineViewportTrack = tracing.tracks.TimelineViewportTrack;
 
   function testViewport() {
     var testEl = this.addHTMLOutput();
