--- a/trunk/src/importer/linux_perf/android_parser_test.html
+++ b/trunk/src/importer/linux_perf/android_parser_test.html
@@ -124,17 +124,17 @@ function testAndroidUserlandLegacyKernelImport() {
 function testAndroidUserlandChromiumImport() {
   var lines = [
     'SandboxedProces-2894  [001] ...1   253.780659: tracing_mark_write: B|2867|' +
-      'DoWorkLoop|arg1=1',
+      'DoWorkLoop|arg1=1|cat1',
     'SandboxedProces-2894  [001] ...1   253.780671: tracing_mark_write: B|2867|' +
-      'DeferOrRunPendingTask|source=test;task=xyz',
+      'DeferOrRunPendingTask|source=test=test;task=xyz|cat2',
     'SandboxedProces-2894  [001] ...1   253.780671: tracing_mark_write: E|2867|' +
-      'DeferOrRunPendingTask',
+      'DeferOrRunPendingTask||cat1',
     'SandboxedProces-2894  [001] ...1   253.780686: tracing_mark_write: B|2867|' +
-      'MessageLoop::RunTask|source=ipc/ipc_sync_message_filter.cc:Send',
+      'MessageLoop::RunTask|source=ipc/ipc_sync_message_filter.cc:Send|cat2',
     'SandboxedProces-2894  [001] ...1   253.780700: tracing_mark_write: E|2867|' +
-      'MessageLoop::RunTask',
+      'MessageLoop::RunTask||cat1',
     'SandboxedProces-2894  [001] ...1   253.780659: tracing_mark_write: E|2867|' +
-      'DoWorkLoop|arg2=2'
+      'DoWorkLoop|arg2=2|cat2'
   ];
   var m = new tracing.TimelineModel(lines.join('\n'), false);
   assertEquals(0, m.importErrors.length);
@@ -148,7 +148,9 @@ function testAndroidUserlandChromiumImport() {
   assertEquals('SandboxedProces', thread.name);
   assertEquals(3, thread.slices.length);
 
-  assertEquals('test', thread.slices[0].args['source']);
+  assertEquals('test=test', thread.slices[0].args['source']);
+  assertEquals('cat2', thread.slices[0].category);
+  assertEquals('DeferOrRunPendingTask', thread.slices[0].title);
   assertEquals('xyz', thread.slices[0].args['task']);
   assertEquals('ipc/ipc_sync_message_filter.cc:Send', thread.slices[1].args['source']);
   assertEquals('1', thread.slices[2].args['arg1']);
