--- a/trunk/src/importer/linux_perf_importer_test.html
+++ b/trunk/src/importer/linux_perf_importer_test.html
@@ -17,46 +17,98 @@ base.require('unittest');
 base.require('test_utils');
 base.require('importer.linux_perf_importer');
 
-function testLineRE() {
-  var re = tracing.importer._LinuxPerfImporterTestExports.lineRE;
-  var x = re.exec('   <idle>-0     [001]  4467.843475: sched_switch: ' +
+function testLineParserWithLegacyFmt() {
+  var p = tracing.importer._LinuxPerfImporterTestExports.lineParserWithLegacyFmt;
+  var x = p('   <idle>-0     [001]  4467.843475: sched_switch: ' +
       'prev_comm=swapper prev_pid=0 prev_prio=120 prev_state=R ==> ' +
       'next_comm=SurfaceFlinger next_pid=178 next_prio=112');
   assertNotNull(x);
-  assertEquals('<idle>-0', x[1]);
-  assertEquals('001', x[2]);
-  assertEquals('4467.843475', x[3]);
-  assertEquals('sched_switch', x[4]);
+  assertEquals('<idle>', x.threadName);
+  assertEquals('0', x.pid);
+  assertEquals('001', x.cpuNumber);
+  assertEquals('4467.843475', x.timestamp);
+  assertEquals('sched_switch', x.eventName);
   assertEquals('prev_comm=swapper prev_pid=0 prev_prio=120 prev_state=R ==> ' +
-      'next_comm=SurfaceFlinger next_pid=178 next_prio=112', x[5]);
+      'next_comm=SurfaceFlinger next_pid=178 next_prio=112', x.details);
 
-  var x = re.exec('Binder Thread #-647   [001]   260.464294: sched_switch: ' +
+  var x = p('Binder-Thread #-647   [001]   260.464294: sched_switch: ' +
       'prev_comm=Binder Thread # prev_pid=647 prev_prio=120 prev_state=D ==> ' +
       'next_comm=.android.chrome next_pid=1562 next_prio=120');
   assertNotNull(x);
+  assertEquals('Binder-Thread #', x.threadName);
+  assertEquals('647', x.pid);
 }
 
-function testLineREWithIRQInfo() {
-  var re = tracing.importer._LinuxPerfImporterTestExports.lineREWithIRQInfo;
-  var x = re.exec('     systrace.sh-5441  [001] d...  1031.091570: ' +
+function testLineParserWithIRQInfo() {
+  var p = tracing.importer._LinuxPerfImporterTestExports.lineParserWithIRQInfo;
+  var x = p('     systrace.sh-5441  [001] d...  1031.091570: ' +
         'sched_wakeup: comm=debugd pid=4978 prio=120 success=1 target_cpu=000');
   assertNotNull(x);
-  assertEquals('systrace.sh-5441', x[1]);
-  assertEquals('001', x[2]);
-  assertEquals('1031.091570', x[3]);
-  assertEquals('sched_wakeup', x[4]);
-  assertEquals('comm=debugd pid=4978 prio=120 success=1 target_cpu=000', x[5]);
+  assertEquals('systrace.sh', x.threadName);
+  assertEquals('5441', x.pid);
+  assertEquals('001', x.cpuNumber);
+  assertEquals('1031.091570', x.timestamp);
+  assertEquals('sched_wakeup', x.eventName);
+  assertEquals('comm=debugd pid=4978 prio=120 success=1 target_cpu=000', x.details);
+}
+
+function testLineParserWithTGID() {
+  var p = tracing.importer._LinuxPerfImporterTestExports.lineParserWithTGID;
+  var x = p('     systrace.sh-5441  (54321) [001] d...  1031.091570: ' +
+        'sched_wakeup: comm=debugd pid=4978 prio=120 success=1 target_cpu=000');
+  assertNotNull(x);
+  assertEquals('systrace.sh', x.threadName);
+  assertEquals('5441', x.pid);
+  assertEquals('54321', x.tgid);
+  assertEquals('001', x.cpuNumber);
+  assertEquals('1031.091570', x.timestamp);
+  assertEquals('sched_wakeup', x.eventName);
+  assertEquals('comm=debugd pid=4978 prio=120 success=1 target_cpu=000', x.details);
+
+  var x = p('     systrace.sh-5441  (  321) [001] d...  1031.091570: ' +
+        'sched_wakeup: comm=debugd pid=4978 prio=120 success=1 target_cpu=000');
+  assertNotNull(x);
+  assertEquals('321', x.tgid);
+
+  var x = p('     systrace.sh-5441  (-----) [001] d...  1031.091570: ' +
+        'sched_wakeup: comm=debugd pid=4978 prio=120 success=1 target_cpu=000');
+  assertNotNull(x);
+  assertEquals(undefined, x.tgid);
 }
 
 function testAutodetectLineCornerCases() {
-  var line = 'systrace.sh-8170  [001] 15180.978813: sched_switch: ' +
-             'prev_comm=systrace.sh prev_pid=8170 prev_prio=120 ' +
-             'prev_state=x ==> next_comm=kworker/1:0 next_pid=7873 ' +
-             'next_prio=120';
-  var autoLineRE =
-      tracing.importer._LinuxPerfImporterTestExports.autoDetectLineRE(line);
-  var lineRE = tracing.importer._LinuxPerfImporterTestExports.lineRE;
-  assertEquals(autoLineRE, lineRE, 'Mis-detected line format without IRQ info');
+  var detectParser =
+    tracing.importer._LinuxPerfImporterTestExports.autoDetectLineParser;
+  var lineParserWithLegacyFmt =
+    tracing.importer._LinuxPerfImporterTestExports.lineParserWithLegacyFmt;
+  var lineParserWithIRQInfo =
+    tracing.importer._LinuxPerfImporterTestExports.lineParserWithIRQInfo;
+  var lineParserWithTGID =
+    tracing.importer._LinuxPerfImporterTestExports.lineParserWithTGID;
+
+  var lineWithLegacyFmt =
+    'systrace.sh-8170  [001] 15180.978813: sched_switch: ' +
+    'prev_comm=systrace.sh prev_pid=8170 prev_prio=120 ' +
+    'prev_state=x ==> next_comm=kworker/1:0 next_pid=7873 ' +
+    'next_prio=120';
+  var detected = detectParser(lineWithLegacyFmt);
+  assertEquals(detected, lineParserWithLegacyFmt);
+
+  var lineWithIRQInfo =
+    'systrace.sh-8170  [001] d... 15180.978813: sched_switch: ' +
+    'prev_comm=systrace.sh prev_pid=8170 prev_prio=120 ' +
+    'prev_state=x ==> next_comm=kworker/1:0 next_pid=7873 ' +
+    'next_prio=120';
+  var detected = detectParser(lineWithIRQInfo);
+  assertEquals(detected, lineParserWithIRQInfo);
+
+  var lineWithTGID =
+    'systrace.sh-8170  (54321) [001] d... 15180.978813: sched_switch: ' +
+    'prev_comm=systrace.sh prev_pid=8170 prev_prio=120 ' +
+    'prev_state=x ==> next_comm=kworker/1:0 next_pid=7873 ' +
+    'next_prio=120';
+  var detected = detectParser(lineWithTGID);
+  assertEquals(detected, lineParserWithTGID);
 }
 
 function testTraceEventClockSyncRE() {
