--- a/trunk/src/importer/linux_perf/android_parser_test.html
+++ b/trunk/src/importer/linux_perf/android_parser_test.html
@@ -133,7 +133,9 @@ function testAndroidUserlandChromiumImport() {
       'MessageLoop::RunTask|source=ipc/ipc_sync_message_filter.cc:Send|cat2',
     'SandboxedProces-2894  [001] ...1   253.780700: tracing_mark_write: E|2867|' +
       'MessageLoop::RunTask||cat1',
-    'SandboxedProces-2894  [001] ...1   253.780659: tracing_mark_write: E|2867|' +
+    'SandboxedProces-2894  [001] ...1   253.780750: tracing_mark_write: C|2867|' +
+      'counter1|10|cat1',
+    'SandboxedProces-2894  [001] ...1   253.780859: tracing_mark_write: E|2867|' +
       'DoWorkLoop|arg2=2|cat2'
   ];
   var m = new tracing.TimelineModel(lines.join('\n'), false);
@@ -155,6 +157,13 @@ function testAndroidUserlandChromiumImport() {
   assertEquals('ipc/ipc_sync_message_filter.cc:Send', thread.slices[1].args['source']);
   assertEquals('1', thread.slices[2].args['arg1']);
   assertEquals('2', thread.slices[2].args['arg2']);
+
+  var counters = m.getAllCounters();
+  assertEquals(1, counters.length);
+  assertEquals('cat1', counters[0].category);
+  assertEquals('counter1', counters[0].name);
+  assertEquals(1, counters[0].numSamples);
+  assertEquals(10, counters[0].getSampleValue(0, 0));
 }
 
 </script>
