--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -53,9 +53,11 @@ found in the LICENSE file.
     'tracks/timeline_slice_track_test.html',
     'tracks/timeline_thread_track_test.html',
     'tracks/timeline_viewport_track_test.html',
+    'analysis/counter_selection_analysis_test.html',
     'analysis/selection_analysis_test.html',
     'analysis/slice_selection_analysis_test.html',
     'analysis/slice_group_selection_analysis_test.html',
+    'analysis/single_counter_selection_analysis_test.html',
     'analysis/single_slice_selection_analysis_test.html',
   ];
 </script>
