--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -55,7 +55,7 @@ found in the LICENSE file.
     m.importTraces(traces, true);
 
     timelineViewEl = document.querySelector('.view');
-    base.ui.decorate(timelineViewEl, tracing.TimelineView);
+    tracing.ui.decorate(timelineViewEl, tracing.TimelineView);
     timelineViewEl.model = m;
     timelineViewEl.tabIndex = 1;
     timelineViewEl.timeline.focusElement = timelineViewEl;
