--- a/trunk/src/analysis/counter_selection_analysis_test.html
+++ b/trunk/src/analysis/counter_selection_analysis_test.html
@@ -13,59 +13,59 @@ found in the LICENSE file.
   <script>
     base.require('unittest');
     base.require('analysis.counter_selection_analysis');
-    base.require('analysis.analysis_test_support');
+    base.require('analysis.test.analysis_test_support');
   </script>
   <script>
     'use strict';
 
     function testEmptySelection() {
       var selection = new tracing.TimelineSelection();
-      var analysis = new tracing.CounterSelectionAnalysis();
+      var analysis = new tracing.analysis.CounterSelectionAnalysis();
       assertThrows(function() {
         analysis.selection = selection;
       });
     }
 
     function testCounterSelectionAnalysisWithSlice() {
-      var data = tracing.createReferenceData(true);
+      var data = tracing.analysis.test.createReferenceData(true);
 
       var selection = new tracing.TimelineSelection();
       data.t1track.selectByTitle('b', selection);
 
-      var analysis = new tracing.CounterSelectionAnalysis();
+      var analysis = new tracing.analysis.CounterSelectionAnalysis();
       assertThrows(function() {
         analysis.selection = selection;
       });
     }
 
     function testCounterSelectionAnalysisWithOneCounter() {
-      var data = tracing.createReferenceData(true);
+      var data = tracing.analysis.test.createReferenceData(true);
 
       var selection = new tracing.TimelineSelection();
       selection.addCounterSample(data.ctr1track, data.ctr1track.counter, 0);
 
-      var analysis = new tracing.CounterSelectionAnalysis();
+      var analysis = new tracing.analysis.CounterSelectionAnalysis();
       analysis.selection = selection;
 
       var counterSelectionEl = analysis;
       var singleCounterEl = counterSelectionEl.children[1];
 
       assertEquals(true, counterSelectionEl instanceof
-          tracing.CounterSelectionAnalysis);
+          tracing.analysis.CounterSelectionAnalysis);
       assertEquals(true, singleCounterEl instanceof
-          tracing.SingleCounterSelectionAnalysis);
+          tracing.analysis.SingleCounterSelectionAnalysis);
       assertEquals(2, counterSelectionEl.children.length);
       assertEquals(1, singleCounterEl.children.length);
     }
 
     function testSelectionAnalysisWithTwoCounters() {
-      var data = tracing.createReferenceData(true);
+      var data = tracing.analysis.test.createReferenceData(true);
 
       var selection = new tracing.TimelineSelection();
       selection.addCounterSample(data.ctr1track, data.ctr1track.counter, 0);
       selection.addCounterSample(data.ctr2track, data.ctr2track.counter, 3);
 
-      var analysis = new tracing.CounterSelectionAnalysis();
+      var analysis = new tracing.analysis.CounterSelectionAnalysis();
       analysis.selection = selection;
 
       var counterSelectionEl = analysis;
@@ -73,11 +73,11 @@ found in the LICENSE file.
       var singleCounterEl2 = counterSelectionEl.children[2];
 
       assertEquals(true, counterSelectionEl instanceof
-          tracing.CounterSelectionAnalysis);
+          tracing.analysis.CounterSelectionAnalysis);
       assertEquals(true, singleCounterEl instanceof
-          tracing.SingleCounterSelectionAnalysis);
+          tracing.analysis.SingleCounterSelectionAnalysis);
       assertEquals(true, singleCounterEl2 instanceof
-          tracing.SingleCounterSelectionAnalysis);
+          tracing.analysis.SingleCounterSelectionAnalysis);
       assertEquals(3, counterSelectionEl.children.length);
       assertEquals(1, singleCounterEl.children.length);
       assertEquals(1, singleCounterEl2.children.length);
