--- a/trunk/src/analysis/single_counter_selection_analysis_test.html
+++ b/trunk/src/analysis/single_counter_selection_analysis_test.html
@@ -14,50 +14,50 @@ found in the LICENSE file.
     base.require('unittest');
     base.require('test_utils');
     base.require('analysis.single_counter_selection_analysis');
-    base.require('analysis.analysis_test_support');
+    base.require('analysis.test.analysis_test_support');
   </script>
   <script>
     'use strict';
 
     function testSingleCounterSelectionWithSlice() {
-      var data = tracing.createReferenceData(true);
+      var data = tracing.analysis.test.createReferenceData(true);
 
       var selection = new tracing.TimelineSelection();
       data.t1track.selectByTitle('b', selection);
 
-      var analysis = new tracing.SingleCounterSelectionAnalysis();
+      var analysis = new tracing.analysis.SingleCounterSelectionAnalysis();
       assertThrows(function() {
         analysis.selection = selection;
       });
     }
 
     function testSingleCounterSelectionAnalysisWithSingleCounter() {
-      var data = tracing.createReferenceData(true);
+      var data = tracing.analysis.test.createReferenceData(true);
 
       var selection = new tracing.TimelineSelection();
       selection.addCounterSample(data.ctr1track, data.ctr1track.counter, 0);
 
-      var analysis = new tracing.SingleCounterSelectionAnalysis();
+      var analysis = new tracing.analysis.SingleCounterSelectionAnalysis();
       analysis.selection = selection;
 
       var singleCounterEl = analysis;
       var rowEl = singleCounterEl.children[0];
 
       assertEquals(true, singleCounterEl instanceof
-          tracing.SingleCounterSelectionAnalysis);
+          tracing.analysis.SingleCounterSelectionAnalysis);
       assertEquals(1, singleCounterEl.children.length);
       assertEquals('ctr1', rowEl.children[0].textContent);
       assertEquals('0', rowEl.children[1].textContent);
     }
 
     function testSingleCounterSelectionAnalysisWithMultipleCounters() {
-      var data = tracing.createReferenceData(true);
+      var data = tracing.analysis.test.createReferenceData(true);
 
       var selection = new tracing.TimelineSelection();
       selection.addCounterSample(data.ctr1track, data.ctr1track.counter, 0);
       selection.addCounterSample(data.ctr2track, data.ctr2track.counter, 3);
 
-      var analysis = new tracing.SingleCounterSelectionAnalysis();
+      var analysis = new tracing.analysis.SingleCounterSelectionAnalysis();
       assertThrows(function() {
         analysis.selection = selection;
       });
