--- a/trunk/src/analysis/slice_selection_analysis_test.html
+++ b/trunk/src/analysis/slice_selection_analysis_test.html
@@ -14,26 +14,26 @@ found in the LICENSE file.
     base.require('unittest');
     base.require('test_utils');
     base.require('analysis.slice_selection_analysis');
-    base.require('analysis.analysis_test_support');
+    base.require('analysis.test.analysis_test_support');
   </script>
   <script>
     'use strict';
 
     function testEmptySelection() {
       var selection = new tracing.TimelineSelection();
-      var analysis = new tracing.SliceSelectionAnalysis();
+      var analysis = new tracing.analysis.SliceSelectionAnalysis();
       assertThrows(function() {
         analysis.selection = selection;
       });
     }
 
     function testSliceSelectionAnalysisWithMultipleSlicesSameTitle() {
-      var data = tracing.createReferenceData(true);
+      var data = tracing.analysis.test.createReferenceData(true);
 
       var selection = new tracing.TimelineSelection();
       data.t1track.selectByTitle('b', selection);
 
-      var analysis = new tracing.SliceSelectionAnalysis();
+      var analysis = new tracing.analysis.SliceSelectionAnalysis();
       analysis.selection = selection;
 
       var sliceSelectionEl = analysis;
@@ -41,22 +41,22 @@ found in the LICENSE file.
       var headerEl = sliceSelectionEl.children[0];
 
       assertEquals(true, sliceSelectionEl instanceof
-          tracing.SliceSelectionAnalysis);
+          tracing.analysis.SliceSelectionAnalysis);
       assertEquals(3, sliceSelectionEl.children.length);
       assertEquals(true, groupSliceEl instanceof
-          tracing.SliceGroupSelectionAnalysis);
+          tracing.analysis.SliceGroupSelectionAnalysis);
       assertEquals(1, groupSliceEl.children.length);
       assertEquals(3, headerEl.children.length);
     }
 
 
-    function testSliceSelectionAnalysisWithMultipleSlicesSameTitle() {
-      var data = tracing.createReferenceData(true);
+    function testSliceSelectionAnalysisWithMultipleSlicesSameTitle2() {
+      var data = tracing.analysis.test.createReferenceData(true);
 
       var selection = new tracing.TimelineSelection();
       data.t1track.selectByTitle('b', selection);
 
-      var analysis = new tracing.SliceSelectionAnalysis();
+      var analysis = new tracing.analysis.SliceSelectionAnalysis();
       analysis.selection = selection;
 
       var sliceSelectionEl = analysis;
@@ -64,7 +64,8 @@ found in the LICENSE file.
       var groupSliceEl = sliceSelectionEl.children[1];
       var summaryEl = sliceSelectionEl.children[2];
 
-      assertEquals(true, analysis instanceof tracing.SliceSelectionAnalysis);
+      assertEquals(true,
+          analysis instanceof tracing.analysis.SliceSelectionAnalysis);
       assertEquals(3, analysis.children.length);
       assertEquals(3, headerEl.children.length);
       assertEquals(1, groupSliceEl.children.length);
@@ -72,7 +73,7 @@ found in the LICENSE file.
     }
 
     function testSliceSelectionAnalysisWithMultipleSlicesDifferentTitles() {
-      var data = tracing.createReferenceData(true);
+      var data = tracing.analysis.test.createReferenceData(true);
 
       var selection = new tracing.TimelineSelection();
       data.t1track.selectByTitle('b', selection);
@@ -82,7 +83,7 @@ found in the LICENSE file.
       data.t1track.selectByTitle('Slice with a really, really long name.',
                                   selection);
 
-      var analysis = new tracing.SliceSelectionAnalysis();
+      var analysis = new tracing.analysis.SliceSelectionAnalysis();
       analysis.selection = selection;
 
       var sliceSelectionEl = analysis;
@@ -90,9 +91,9 @@ found in the LICENSE file.
       var headerEl = sliceSelectionEl.children[0];
 
       assertEquals(true, sliceSelectionEl instanceof
-          tracing.SliceSelectionAnalysis);
+          tracing.analysis.SliceSelectionAnalysis);
       assertEquals(true, groupSliceEl instanceof
-          tracing.SliceGroupSelectionAnalysis);
+          tracing.analysis.SliceGroupSelectionAnalysis);
       assertEquals(7, sliceSelectionEl.children.length);
       assertEquals(1, groupSliceEl.children.length);
       assertEquals(3, headerEl.children.length);
