--- a/trunk/src/interactive_tests.html
+++ b/trunk/src/interactive_tests.html
@@ -65,7 +65,7 @@ found in the LICENSE file.
     containerEl.style.maxHeight = '800px';
 
     var timelineViewEl = document.createElement('div');
-    base.ui.decorate(timelineViewEl, tracing.TimelineView);
+    tracing.ui.decorate(timelineViewEl, tracing.TimelineView);
     timelineViewEl.focusElement = containerEl;
 
     parentEl.appendChild(titleEl);
