v8 log importer + tests.
Review URL: https://codereview.appspot.com/7836048

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -59,6 +59,7 @@ found in the LICENSE file.
     'analysis/slice_group_selection_analysis_test.html',
     'analysis/single_counter_selection_analysis_test.html',
     'analysis/single_slice_selection_analysis_test.html',
+    'v8_log_importer_test.html',
   ];
 </script>
 <style>
